docs: update swagger docs (#42)
