# src/core/model/request.go
@@ -1,7 +1,7 @@
 package model
 
 type ClusterReq struct {
-	Name         string       `json:"name"`
+	Name         string       `json:"name" example:"cluster-01"`
 	ControlPlane []NodeConfig `json:"controlPlane"`
 	Worker       []NodeConfig `json:"worker"`
 	Config       Config       `json:"config"`
@@ -13,9 +13,9 @@ type NodeReq struct {
 }
 
 type NodeConfig struct {
-	Connection string `json:"connection"`
-	Count      int    `json:"count"`
-	Spec       string `json:"spec"`
+	Connection string `json:"connection" example:"config-aws-ap-northeast-2"`
+	Count      int    `json:"count" example:"3"`
+	Spec       string `json:"spec" example:"t2.medium"`
 }
 
 type Config struct {
@@ -23,8 +23,8 @@ type Config struct {
 }
 
 type Kubernetes struct {
-	NetworkCni       string `json:"networkCni"`
-	PodCidr          string `json:"podCidr"`
-	ServiceCidr      string `json:"serviceCidr"`
-	ServiceDnsDomain string `json:"serviceDnsDomain"`
+	NetworkCni       string `json:"networkCni" example:"kilo" enums:"kilo,canal"`
+	PodCidr          string `json:"podCidr" example:"10.244.0.0/16"`
+	ServiceCidr      string `json:"serviceCidr" example:"10.96.0.0/12"`
+	ServiceDnsDomain string `json:"serviceDnsDomain" example:"cluster.local"`
 }
